tooling/nargo_cli/tests/snapshots/execution_success/conditional_2/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u32, v1: [u32; 4]):
    v2 = allocate -> &mut [u32; 4]
    store v1 at v2
    (no terminator instruction)
}
